# ci_test

./: main.py  pyproject.toml
.github/: README_CICD.md
.github/actions/build_and_push_internal_term/: action.yaml
.github/actions/build_and_push_risk_assessment/: action.yaml
.github/actions/build_and_push_securechat/: action.yaml
.github/actions/deploy_to_ecs_internal_term/: action.yaml
.github/actions/deploy_to_ecs_risk_assessment/: action.yaml
.github/actions/deploy_to_ecs_securechat/: action.yaml
.github/workflows/: add-issue-to-project.yaml  ci-infra.yaml  ci-internal-term.yaml  ci-mitsuai-backend.yml  ci-pocvec.yaml  ci-risk-assessment.yaml  ci-securechat.yaml  deploy-internal-term.yaml  deploy-risk-assessment.yaml  deploy-securechat.yaml
test/backend/: pyproject.toml
test/backend/src/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/backend/src/service/: doc.py
