[project]
name = "backend"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy",
  "alembic",
  "sqlmodel",
  "psycopg2-binary",
  "python-dotenv",
  "passlib[bcrypt]",
  "pydantic-settings>=2.10.1",
  "pyjwt>=2.10.1",
  "cryptography>=45.0.5",
  "boto3>=1.40.1",
  "boto3-stubs[bedrock-agent-runtime,s3]>=1.40.1",
  "openai>=1.50.0",
  "loguru",
  "asyncpg>=0.30.0",
  "greenlet>=3.2.3",
  "tiktoken>=0.6.0",
  "python-multipart>=0.0.20",
]

[project.optional-dependencies]
dev = ["ruff", "black", "isort", "pytest", "httpx", "pyright>=1.1.403"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "D100", "D104", "D103", "T201", "S101"] # 開発初期のみルール緩和

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "bandit>=1.8.6",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pyright]
include = ["src/**"]
exclude = [
  "src/db/migrations/versions/**",
  ".venv/**",
  "**/__pycache__/**",
  "**/.pytest_cache/**",
]
